# UltraSimpleConfig

./: .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
tests/: test_loading.py
tests/example_config/: db.yaml
ultra_simple_config/: __init__.py  config.py
